21.12.06 리팩토링, 버그 수정